--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         </li>
                         <li id="w-node-_50b232f7-9c30-4504-2a38-b2845103532a-e253abbe" class="nav_item cc-right">
                             <a href="https://twitter.com/ryry__mimi" target="_blank" class="nav-text">Twitter</a>
-                            <a href="/about-contact/index.html" class="nav-text">About / Contact</a>
+                            <a href="/website-12/about-contact/index.html" class="nav-text">About / Contact</a>
                         </li>
                     </ul>
                 </nav>
@@ -901,7 +901,7 @@
                         <div id="w-node-c5d8f08f-0c89-776b-d453-375fe28fb259-e28fb257">
                             <ul role="list" class="link-list w-list-unstyled">
                                 <li class="link-list_item">
-                                    <a href="/about-contact/index.html" class="out-link-button w-inline-block">
+                                    <a href="/website-12/about-contact/index.html" class="out-link-button w-inline-block">
                                         <div class="cta-text">About/Contact</div>
                                     </a>
                                 </li>
