--- a/about-contact/index.html
+++ b/about-contact/index.html
@@ -144,7 +144,7 @@
                         <div id="w-node-c5d8f08f-0c89-776b-d453-375fe28fb259-e28fb257">
                             <ul role="list" class="link-list w-list-unstyled">
                                 <li class="link-list_item">
-                                    <a href="/website-12/about-contact" aria-current="page" class="out-link-button w-inline-block w--current">
+                                    <a href="https://sachin190820.github.io/website-12/about-contact/" aria-current="page" class="out-link-button w-inline-block w--current">
                                         <div class="cta-text">About/Contact</div>
                                     </a>
                                 </li>
